<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/appLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@android:color/darker_gray"
        android:text="The Cat In The Hat Apps"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/udacity_orange"
        android:textAllCaps="false"
        android:layout_margin="5dp"
        android:minWidth="150dp"
        android:textSize="16dp"
        android:text="@string/cat_button"
        android:clickable="true"
        android:id="@+id/catButton"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/catButton"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonLayout">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thing_one_button"
        android:textAllCaps="false"
        android:layout_margin="5dp"
        android:minWidth="150dp"
        android:textSize="16dp"
        android:background="#F08C35"
        android:id="@+id/thingOneButton"
    />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thing_two_button"
        android:textAllCaps="false"
        android:background="#F08C35"
        android:layout_margin="5dp"
        android:textSize="16dp"
        android:minWidth="150dp"
        android:id="@+id/thingTwoButton"
        android:layout_alignTop="@+id/thingOneButton"
    />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thingamajing_button"
        android:textAllCaps="false"
        android:layout_margin="5dp"
        android:minWidth="150dp"
        android:background="#F08C35"
        android:textSize="16dp"
        android:id="@+id/thingaButton"
        android:layout_below="@+id/buttonLayout"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sally_button"
        android:textAllCaps="false"
        android:background="#F08C35"
        android:layout_margin="5dp"
        android:minWidth="150dp"
        android:textSize="16dp"
        android:id="@+id/sallyButton"
        android:layout_below="@+id/thingaButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nick_button"
        android:textAllCaps="false"
        android:background="#F08C35"
        android:layout_margin="5dp"
        android:minWidth="150dp"
        android:id="@+id/nickButton"
        android:textSize="16dp"
        android:layout_below="@+id/sallyButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dr_seuss_button"
        android:textAllCaps="false"
        android:layout_margin="5dp"
        android:minWidth="150dp"
        android:background="@color/red"
        android:id="@+id/doctorButton"
        android:layout_below="@+id/nickButton"
        android:textSize="18dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
